syntax = "proto3";

import "payment.proto";
package block;

message Block {
   string sessionId = 1; // request session id
   uint64 index = 2; // block index of file
   string fileHash = 3; // file  hash
   string hash = 4; // block hash
   bytes data = 5; // raw data
   bytes tag = 6; // used for pdp
   int32 operation = 7; // block operation
   int64 offset = 8; // data offset of file
   payment.Payment payment = 9; // payment detail
}