syntax = "proto3";

package file;

message Payment {
    string walletAddress = 1; // payer wallet address
    int32 asset = 2; // asset id
    uint64 unitPrice = 3; // unit price per byte
}

message File {
   string hash = 1;  
   repeated string blockHashes = 2;
   int32 operation = 3;
   string prefix = 4;
   int32 chunkSize = 5;
   Payment payInfo = 6;
}